--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<div class="credits">
+<h3>Created by Robert Nester</h3>
+</div>
+
 <div class="title">
 <h1>Prince of Wales Quantum Computing Club</h1>
 </div>
@@ -41,7 +45,7 @@
   <li>Quantum Computation and Quantum Information (Michael A. Nielsen and Isaac L. Chuang)</li>
   <p></p>
   <li><a href="https://courses.edx.org/courses/course-v1:MITx+8.370.1x+1T2018/course/">MIT Quantum Information Science I, Part 1</a></li><!--watch casually alongside textbook--><!--650 on the quantum info-->
-  <p></p>
+  <p></p><!--central: 12 secondary: 13 tertiary: 6-11-->
   <li><a href="https://quantumcurriculum.mit.edu/">MIT Quantum Computing Curriculum (Series Continues)</a></li>
 </ol>
 </div>
@@ -88,6 +92,12 @@ div.title {
     font-family: "Lato",sans-serif;
     font-size: 20pt;
     color: #66acb4;
+}
+
+div.credits {
+    text-align: center;
+    font-family: "Lato",sans-serif;
+    color: #666666;
 }
 
 IMG.logo {
